--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,14 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts:
+    - family: Gilroy
+      fonts:
+        - asset: assets/fonts/Gilroy-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Gilroy-Heavy.ttf
+          weight: 900
+        - asset: assets/fonts/Gilroy-Light.ttf
+          weight: 300
+
