--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.1
-  firebase_auth: ^4.10.1
-  firebase_core: ^2.17.0
   cloud_firestore: ^4.9.3
+  http: ^1.1.0
+  fluttertoast: ^8.2.2
+  flutter_launcher_icons: ^0.13.1
+  dio: ^5.3.3
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +58,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  image_path: "assets/img/logo.png"
+  android: true
+  ios: true
 
 # The following section is specific to Flutter packages.
 flutter:
